fixed weird jumping bug

--- a/src/UI-Kit/Tile/Tile.module.scss
+++ b/src/UI-Kit/Tile/Tile.module.scss
@@ -27,9 +27,4 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-
-  & > img {
-    object-fit: cover !important; // or whatever
-    object-position: 100% 100% !important; // or whatever
-  }
 }
